# Data-Analysis

./: .gitattributes  .gitignore  Commit Les 1.txt  Deleted entries DAC.txt  Q&A_16Sep2025_graph_1.txt  Q&A_16Sep2025_graph_2.txt  Q&A_16Sep2025_graph_3.txt  Q&A_16Sep2025_graph_4.txt  Q&A_16Sep2025_graph_5.txt  Q&A_16Sep2025_venv_5.txt  Q&A_16Sep2025_venv_6.txt  Q&A_1_16Sep2025.txt  Q&A_2_16Sep2025.txt  Q&A_2_9Sep2025.txt  Q&A_3_16Sep2025.txt  Q&A_3_9Sep2025.txt  Q&A_4_16Sep2025.txt  Q&A_4_9Sep2025.txt  Q&A_5_9Sep2025.txt  Q&A_6_9Sep2025.txt  Q&A_9Sep2025.txt  README.md  Warnings by git.txt  Zero_participation_for all.xlsx  config.toml  crazy_days_by_year.xlsx  crazy_days_by_year_enriched.csv  main.py  pyproject.toml  requirements.txt  zero_participation_AB.csv  zero_participation_AvT.csv  zero_participation_M.csv  zero_participation_PB.csv
data/processed/: dac.xlsx  golf-combi.xlsx  golf.xlsx  maap.xlsx  voorganger-golf.xlsx  whatsapp-20250910-001006-dac.csv  whatsapp-20250910-001247-golf.csv  whatsapp-20250910-001356-maap.csv  whatsapp-20250910-002822-maap-cleaned.csv  whatsapp-20250910-002822-maap-cleaned.parq  whatsapp-20250910-004727-golf-cleaned.csv  whatsapp-20250910-004727-golf-cleaned.parq  whatsapp-20250910-005041-dac-cleaned.csv  whatsapp-20250910-005041-dac-cleaned.parq  whatsapp-20250910-010952-voorganger-golf.csv  whatsapp-20250910-011201-til.csv  whatsapp-20250910-012135-til-cleaned.csv  ~$maap.xlsx  (+3 more)
notebooks/: 01-cleaning.ipynb  02-comparing_categories.ipynb  02-comparing_categories_coupe.ipynb  crazy_days_by_year.csv  merged_file.parquet
(+7 files in other folders)
